[package]
name = "RedStream-Optimizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "RedStream_Optimizer"
path = "src/lib.rs"  

[dependencies]
console_error_panic_hook = "0.1"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
wasm-bindgen = "0.2" 
log = "0.4"